[tool.poetry]
name = "learn-d2l"
version = "0.1.0"
description = ""
authors = ["JL"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
d2l = "^0.17.3"
torch = "^1.10.2"
torchvision = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
